[project]
name = "pinyin-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "edge-tts>=7.2.3",
    "jieba>=0.42.1",
    "nest-asyncio>=1.6.0",
    "pypinyin>=0.55.0",
    "streamlit>=1.51.0",
]
